# eryzaa

./: .env.example  .gitignore  .zerotier_ip  AVALANCHE_SDK_README.md  CROSS_PLATFORM_DEPLOYMENT.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETE.md  TESTING_GUIDE.md  build.sh  deploy_production.sh  docker-compose.fast.yml  docker-compose.yml  docker-entrypoint.sh  eryzaa-rental-cli  hardhat.config.cjs  hardhat.config.js  helper-hardhat-config.cjs  index.html  launcher.py  manage.sh  manage_services.sh  package-lock.json  package.json  start_eryzaa.sh  status_eryzaa.sh  stop_eryzaa.sh  test_runner.py
artifacts/blockchain/contracts/EryzaComputeMarketplace.sol/: EryzaComputeMarketplace.json
artifacts/blockchain/contracts/EryzaJobsLedger.sol/: EryzaJobsLedger.dbg.json  EryzaJobsLedger.json
artifacts/contracts/EryzaToken.sol/: EryzaToken.dbg.json  EryzaToken.json
backend/: api_server.py  api_server_blockchain.py  eryzaa.db  main.py  package-lock.json  package.json  pytest.ini  requirements-test.txt  requirements.txt  requirements_blockchain.txt  server.js
backend/app/core/: avalanche_blockchain.py  blockchain.py  config.py  database.py  logger.py  scheduler.py
backend/app/models/: models.py
backend/app/schemas/: jobs.py  nodes.py
backend/app/services/: monitoring.py
backend/controllers/: authController.js  jobController.js  nodeController.js
backend/middleware/: auth.js
backend/models/: Job.js  Node.js  User.js
backend/routes/: auth.js  blockchain_jobs_display.js  job_rental.js  jobs.js  jobsDisplay.js  nodes.js
backend/tests/: conftest.py  test_blockchain.py  test_config.py  test_gpu_subnet_integration.py  test_main.py
backend/tests/unit/: test_health.py
blockchain/contracts/: EryzaComputeMarketplace.sol  EryzaJobsLedger.sol  EryzaStaking.sol  EryzaToken.sol  EryzaaToken.sol
blockchain/deploy/: deploy_01-deploy-eryza-token.cjs  deploy_02-deploy-job-escrow.cjs  deploy_03-deploy-jobs-ledger.cjs
blockchain/scripts/: contract-interactions.cjs  deploy.cjs  deploy.js  deploy_direct.cjs  deploy_fuji.cjs  monitor.cjs
blockchain/utils/: avalanche-client.cjs  verify.cjs
cache/: console-history.txt  solidity-files-cache.json
client/: Cargo.toml
client/src/: main.rs
contract/: EryzaGPUSubnetManager.sol  Eryzatoken.sol  deployjob.sol
contracts/: EryzaToken.sol
core/cli/: .gitignore
core/cli/src/: main.rs
core/discovery/: Cargo.toml
core/discovery/src/: lib.rs
core/gui/gui-client/: Cargo.toml
core/gui/gui-client/src/: main.rs
core/gui/gui-rental/: Cargo.toml
core/gui/gui-rental/src/: main.rs
core/server/: Cross.toml
core/server/src/: main.rs
core/ssh-manager/: Cargo.toml
core/ssh-manager/src/: lib.rs
deployments/fuji/: EryzaComputeMarketplace.json  EryzaJobsLedger.json  EryzaToken.json
docs/: README.md  build-linux.md
gui-client/: Cargo.toml
gui-client/src/: main.rs
gui-rental/: Cargo.toml
gui-rental/src/: main.rs
infrastructure/docker/: Dockerfile  Dockerfile.dev  Dockerfile.fast  Dockerfile.inference  Dockerfile.training  docker-compose.dev.yml  docker-compose.ssh.yml  docker-entrypoint.dev.sh
infrastructure/models/: README.md  docker-compose.yml
infrastructure/models/inference/: server.py
infrastructure/models/training/: train.py
monitoring/: system_monitor.sh
project/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
project/public/x86_64-unknown-linux-gnu/: README.md  eryzaa-cli  eryzaa-server  install.sh  test.sh
project/src/: App.tsx
project/src/components/: Dashboard.tsx  JobsDisplay.tsx  RentNowModal.tsx  WalletConnection.tsx
project/src/config/: database.ts
project/src/contexts/: AuthContext.tsx  JobsContext.tsx  RoleContext.tsx  ThemeContext.tsx  Web3Context.tsx
project/src/hooks/: useCoreWallet.ts
project/src/pages/: ClientDashboard.tsx  Community.tsx  CreateJob.tsx  CreateJobNew.tsx  Dashboard.tsx  JobDetails.tsx  JobDetailsSimple.tsx  Jobs.tsx  JobsLedger.tsx  Landing.tsx  Login.tsx  MyJobs.tsx  Profile.tsx  RegisterNode.tsx  RoleDashboard.tsx  Settings.tsx  SmartContracts.tsx  SystemMonitoring.tsx
project/src/services/: authService.ts  blockchainService.ts  jobsLedgerService.ts  walletIntegrationService.ts
project/src/types/: ethereum.d.ts
project/src/utils/: WalletStateManager.ts
rental/: Cargo.toml
rental-cli/: Cargo.toml
rental-cli/src/: main.rs
rental/src/: main.rs
scripts/: chainkit-examples.cjs  scripts_setup-contracts.js
test/: Counter.ts
tools/: blockchain_integration.cjs  blockchain_integration.js  build.ps1  build.sh  launcher.py  package.sh  rental_cli.sh  setup_wallet.js  ssh_service.sh
website/: index.html
(+26 files in other folders)
