[package]
name = "rental-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
crossterm = "0.27"
tui = "0.19"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
