[package]
name = "rental"
version = "0.1.0"
edition = "2021"

[workspace]
# This is a separate workspace to avoid conflicts

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
sysinfo = "0.30"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
