[package]
name = "eryzaa-discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
sysinfo = "0.30"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
