[package]
name = "eryzaa-ssh-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
