[package]
name = "eryzaa-client-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eryzaa-client"
path = "src/main.rs"

[dependencies]
eframe = "0.25"
egui = "0.25"
egui_extras = "0.25"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
dirs = "5.0"
rfd = "0.11"
image = "0.24"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tonic = "0.10"
prost = "0.12"
ethers = "2.0"

[dependencies.ssh2]
version = "0.9"
features = ["vendored-openssl"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "consoleapi"] }

[target.'cfg(unix)'.dependencies]
nix = "0.27"
