[package]
name = "eryzaa-rental-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eryzaa-rental"
path = "src/main.rs"

[dependencies]
eframe = "0.25"
egui = "0.25"
egui_extras = "0.25"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
sysinfo = "0.30"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "consoleapi", "processthreadsapi"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["user"] }
